--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.android.gms:play-services-auth:20.7.0")
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation("com.google.firebase:firebase-firestore")
 
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
