--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation("com.google.firebase:firebase-firestore")
 
     testImplementation libs.junit
+    testImplementation("org.mockito:mockito-core:5.15.2")
+
+    androidTestImplementation("org.mockito:mockito-android:5.15.2")
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 }
