--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     testImplementation("org.mockito:mockito-core:5.15.2")
 
     androidTestImplementation("org.mockito:mockito-android:5.15.2")
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 }
