--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,12 +7,10 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    name: android-ci
-    runs-on: ubuntu-latest
-
+  setup:
+    name: setup
+    runs-on:  ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
       # Ensure Node.js is installed (See https://github.com/actions/setup-node)
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -50,15 +48,21 @@ jobs:
 
           # The port to check for the emulators, defaults to 9099 (Cloud Firestore). Change this if you are using specific emulators. See https://firebase.google.com/docs/emulator-suite/install_and_configure#port_configuration.
           check-port: '9099'
+  build:
+    name: android-ci
+    runs-on: ubuntu-latest
+    needs: [setup]
 
-      - name: set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          cache: gradle
+    steps:
+    - uses: actions/checkout@v4
+    - name: set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'adopt'
+        cache: gradle
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
