gradle build action

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -61,6 +61,8 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
         cache: gradle
+    - name: setupGradle
+      uses: gradle/gradle-build-action@v2
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
