--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -61,10 +61,13 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
         cache: gradle
-    - name: setupGradle
-      uses: gradle/gradle-build-action@v2
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Publish Test Report
+      uses: ctrf-io/github-test-reporter@v1
+      with:
+        report-path: '/*/build/reports/tests/test/index.html'
+      if: always()
