--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -69,5 +69,5 @@ jobs:
     - name: Publish Test Report
       uses: ctrf-io/github-test-reporter@v1
       with:
-        report-path: '/*/build/reports/tests/test/index.html'
+        report-path: 'file:///home/runner/work/FantasyFitness/FantasyFitness/app/build/reports/tests/test/index.html'
       if: always()
