--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -66,8 +66,10 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: Publish Test Report
-      uses: ctrf-io/github-test-reporter@v1
+    - name: Store reports
+      uses: actions/upload-artifact@v3
       with:
-        report-path: 'file:///home/runner/work/FantasyFitness/FantasyFitness/app/build/reports/tests/testDebugUnitTest/index.html'
-      if: always()
+        name: reports
+        path: |
+          **/build/reports/
+          **/build/test-results/
