--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -51,8 +51,6 @@ jobs:
   build:
     name: android-ci
     runs-on: ubuntu-latest
-    needs: [setup]
-
     steps:
     - uses: actions/checkout@v4
     - name: set up JDK 17
@@ -66,10 +64,28 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: Store reports
-      uses: actions/upload-artifact@v4
-      with:
-        name: reports
-        path: |
-          **/build/reports/
-          **/build/test-results/
+  android_tests:
+    runs-on: [ macos-12 ]
+    needs: [setup]
+    steps:
+      - uses: actions/checkout@v3
+      - name: set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: 11
+      - name: Instrumented Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: ./gradlew connectedDebugAndroidTest
+  upload_reports:
+     runs-on: ubuntu-latest
+     steps:
+      - name: Store reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: reports
+          path: |
+            **/build/reports/
+            **/build/test-results/
