--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -82,7 +82,7 @@ jobs:
           name: app-debug-androidTest
 
       - name: Login to Google Cloud
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v2
         with:
           version: '270.0.0'
           service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
