--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -81,11 +81,13 @@ jobs:
         with:
           name: app-debug-androidTest
 
-      - name: Login to Google Cloud
-        uses: google-github-actions/setup-gcloud@v2
+      - name: gcloud auth
+        uses: google-github-actions/auth@v2
         with:
-          version: '270.0.0'
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
+          credentials_json: ${{ secrets.SERVICE_ACCOUNT }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
       - name: Set current project
         run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
