--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,7 +32,7 @@ jobs:
         path: |
           **/build/reports/
           **/build/test-results/
-  apk:
+  firebase:
     name: Generate APK
     runs-on: ubuntu-latest
     needs: build
@@ -48,38 +48,9 @@ jobs:
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
-      - name: Upload app APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
 
       - name: Assemble Android Instrumentation Tests
         run: bash ./gradlew assembleDebugAndroidTest
-
-      - name: Upload Android Test APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug-androidTest
-          path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
-
-  firebase:
-    name: Run UI tests with Firebase Test Lab
-    needs: apk
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download app APK
-        uses: actions/download-artifact@v4
-        with:
-          name: app-debug
-
-      - name: Download Android test APK
-        uses: actions/download-artifact@v4
-        with:
-          name: app-debug-androidTest
 
       - name: gcloud auth
         uses: google-github-actions/auth@v2
@@ -93,4 +64,4 @@ jobs:
         run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
 
       - name: Run Instrumentation Tests in Firebase Test Lab
-        run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=pl,orientation=portrait
+        run: gcloud firebase test android run --type instrumentation --app app/build/outputs/apk/debug/app-debug.apk --test app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk --device model=e1q,version=34,locale=pl,orientation=portrait
