--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:21.3.0"
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation("com.google.firebase:firebase-firestore")
+    implementation "androidx.cardview:cardview:1.0.0"
 
     testImplementation libs.junit
     testImplementation("org.mockito:mockito-core:5.15.2")
