--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-
+    - name: Run Coverage
+      run: ./gradlew testCoverage
     - name: Store reports
       uses: actions/upload-artifact@v4
       with:
