--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -30,6 +33,9 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+        }
+        unitTests.all {
+            jvmArgs '-noverify'
         }
     }
 }
