--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.zblouse.fantasyfitness"
-        minSdk 31
+        minSdk 33
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,7 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            unitTests.returnDefaultValues = true
         }
         unitTests.all {
             jvmArgs '-noverify','-Djdk.attach.allowAttachSelf=true'
