--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,16 @@ android {
             jvmArgs '-noverify','-Djdk.attach.allowAttachSelf=true'
         }
     }
+
+    subprojects {
+        tasks.withType(Test) {
+            maxParallelForks = 2
+            forkEvery = 80
+            maxHeapSize = "2048m"
+            minHeapSize = "1024m"
+        }
+    }
+
 }
 
 dependencies {
